--- a/public/locales/zh/chat.json
+++ b/public/locales/zh/chat.json
@@ -1,35 +1,35 @@
 {
-  "OpenAI API Key Required": "需要 OpenAI API 密钥",
-  "Please set your OpenAI API key in the bottom left of the sidebar.": "请在侧边栏左下角设置您的 OpenAI API 密钥。",
-  "If you don't have an OpenAI API key, you can get one here: ": "如果你没有 OpenAI API 密钥，你可以在此获取：",
+  "OpenAI API Key Required": "需要 OpenAI API 金鑰",
+  "Please set your OpenAI API key in the bottom left of the sidebar.": "請在側欄左下角設定你的 OpenAI 金鑰。",
+  "If you don't have an OpenAI API key, you can get one here: ": "如果你没有 OpenAI API 金鑰，你可以在此取得：",
   "Stop Generating": "停止生成",
-  "Prompt limit is {{maxLength}} characters": "提示字数限制为 {{maxLength}} 个字符",
+  "Prompt limit is {{maxLength}} characters": "字數限制为 {{maxLength}} 個字",
   "New Conversation": "新的聊天",
   "System Prompt": "系统提示",
-  "You are ChatGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "你是 ChatGPT，一个由 OpenAI 训练的大型语言模型。请仔细遵循用户的指示。使用 Markdown 格式进行回应。",
-  "Enter a prompt": "输入一个提示",
-  "Regenerate response": "重新生成回应",
-  "Sorry, there was an error.": "抱歉，出现了错误。",
+  "You are ChatGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.": "你是 ChatGPT，由 OpenAI 訓練的大型語言模型。請遵守使用者的指示。使用 Markdown 格式進行回應。",
+  "Enter a prompt": "輸入一個提示",
+  "Regenerate response": "重新生成",
+  "Sorry, there was an error.": "抱歉，出現了錯誤。",
   "Model": "模型",
-  "Conversation": "对话",
+  "Conversation": "對話",
   "OR": "或",
-  "Loading...": "加载中...",
-  "Type a message or type \"/\" to select a prompt...": "输入一条消息或键入 \"/\" 以选择提示...",
-  "Error fetching models.": "获取模型时出错。",
+  "Loading...": "載入中...",
+  "Type a message or type \"/\" to select a prompt...": "輸入文字，或键入 \"/\" 以選擇已存提示...",
+  "Error fetching models.": "載入模型時出錯。",
   "AI": "AI",
   "You": "你",
   "Cancel": "取消",
-  "Save & Submit": "保存并提交",
-  "Make sure your OpenAI API key is set in the bottom left of the sidebar.": "请确保您的 OpenAI API 密钥已在侧边栏左下角设置。",
-  "If you completed this step, OpenAI may be experiencing issues.": "如果您已完成此步骤，OpenAI 可能遇到了问题。",
+  "Save & Submit": "儲存並送出",
+  "Make sure your OpenAI API key is set in the bottom left of the sidebar.": "請確定您的 OpenAI API 金鑰已在側欄左下角設定好。",
+  "If you completed this step, OpenAI may be experiencing issues.": "如果您已完成此步驟，OpenAI 可能遇到了問題。",
   "click if using a .env.local file": "click if using a .env.local file",
-  "Message limit is {{maxLength}} characters. You have entered {{valueLength}} characters.": "消息字数限制为 {{maxLength}} 个字符。您已输入 {{valueLength}} 个字符。",
-  "Please enter a message": "请输入一条消息",
-  "Chatbot UI is an advanced chatbot kit for OpenAI's chat models aiming to mimic ChatGPT's interface and functionality.": "Chatbot UI 是一个高级聊天机器人工具包，旨在模仿 OpenAI 聊天模型的 ChatGPT 界面和功能。",
-  "Are you sure you want to clear all messages?": "你确定要清除所有的消息吗？",
-  "Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.": "较高的数值（例如0.8）会使输出更随机，而较低的数值（例如0.2）会使输出更加聚焦和确定性更强。",
-  "View Account Usage": "查阅账户用量",
-  "Temperature": "生成温度",
+  "Message limit is {{maxLength}} characters. You have entered {{valueLength}} characters.": "訊息字數限制為 {{maxLength}} 個字。您已输入 {{valueLength}} 個字。",
+  "Please enter a message": "請输入一則訊息",
+  "Chatbot UI is an advanced chatbot kit for OpenAI's chat models aiming to mimic ChatGPT's interface and functionality.": "Chatbot UI 是一個聊天機器人，旨在模仿 OpenAI 聊天模型的 ChatGPT 界面和功能。",
+  "Are you sure you want to clear all messages?": "你確定要刪除所有的消息嗎？",
+  "Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.": "較高的數值（例如0.8）使输出更隨機，而較低的數值（例如0.2）匯使输出更加聚焦和確定性更强。",
+  "View Account Usage": "查詢使用量",
+  "Temperature": "生成溫度",
   "Precise": "保守",
   "Neutral": "中立",
   "Creative": "随性"
