--- a/public/locales/zh/settings.json
+++ b/public/locales/zh/settings.json
@@ -1,7 +1,7 @@
 {
-  "Settings": "设置",
-  "Theme": "主题",
+  "Settings": "設定",
+  "Theme": "版形",
   "Dark mode": "深色模式",
-  "Light mode": "浅色模式",
-  "Save": "保存"
+  "Light mode": "淺色模式",
+  "Save": "儲存"
 }
