--- a/public/locales/zh/sidebar.json
+++ b/public/locales/zh/sidebar.json
@@ -1,14 +1,14 @@
 {
-  "New folder": "新建文件夹",
-  "New chat": "新建聊天",
-  "New Conversation": "新的聊天",
-  "No conversations.": "无对话",
-  "Search conversations...": "搜索对话...",
-  "OpenAI API Key": "OpenAI API 密钥",
-  "Import data": "导入对话",
-  "Are you sure?": "确定吗？",
-  "Clear conversations": "清空对话",
-  "Settings": "设置",
-  "Export data": "导出对话",
-  "Plugin Keys": "插件密钥"
+  "New folder": "建立資料夾",
+  "New chat": "建立聊天",
+  "New Conversation": "新增對話",
+  "No conversations.": "沒有對話",
+  "Search conversations...": "搜尋對話...",
+  "OpenAI API Key": "OpenAI API 金鑰",
+  "Import data": "匯入对话",
+  "Are you sure?": "確定？",
+  "Clear conversations": "清空對話",
+  "Settings": "設定",
+  "Export data": "匯出對話",
+  "Plugin Keys": "外掛金鑰"
 }
